k8s/api_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cost-janitor-api-deployment
  namespace: developerautomation-xavgy
  labels:
    project: developerautomation
    department: cloudengineering
    component: cost-janitor
    app: cost-janitor-api  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cost-janitor-api
  template:
    metadata:
      annotations: 
        iam.amazonaws.com/role: arn:aws:iam::454234050858:role/ADFS-Billing
      labels:
        project: developerautomation
        department: cloudengineering
        app: cost-janitor-api
        backstage.io/kubernetes-id: cost-janitor-api
    spec:
      priorityClassName: selfservice
      containers:
      - name: cost-janitor-api
        image: 642375522597.dkr.ecr.eu-west-1.amazonaws.com/dfds.developerautomation-xavgy.cost-janitor:cost-janitor-api-#(Build.BuildId)
        ports:
        - containerPort: 54323
          name: web
        - containerPort: 8080
          name: metrics
        resources:
          requests:
            memory: "200Mi"
            cpu: "100m"
          limits:
            memory: "400Mi"
            cpu: "200m"
