k8s/eventconsumer_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cost-janitor-event-consumer-deployment
  namespace: developerautomation-xavgy
  labels:
    project: developerautomation
    department: cloudengineering
    component: cost-janitor
    app: cost-devops-janitor-event-consumer
spec:
  replicas: 0
  selector:
    matchLabels:
      app: cost-janitor-event-consumer
  template:
    metadata:
#      annotations: 
#        iam.amazonaws.com/role: arn:aws:iam::454234050858:role/cost-janitor
      labels:
        project: developerautomation
        department: cloudengineering
        app: cost-janitor-event-consumer
    spec:
      priorityClassName: selfservice
      containers:
      - name: cost-janitor-event-consumer
        image: 642375522597.dkr.ecr.eu-west-1.amazonaws.com/dfds.developerautomation-xavgy.cost-janitor:cost-janitor-event-consumer-#(Build.BuildId)
        resources:
          requests:
            memory: "200Mi"
            cpu: "100m"
          limits:
            memory: "400Mi"
            cpu: "200m"
