k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cost-janitor-service
  namespace: developerautomation-xavgy
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
  labels:
    app: cost-janitor
    project: developerautomation
    department: cloudengineering
    component: cost-janitor
    scrape-service-metrics: "true"
spec:
  ports:
  - name: external
    port: 80
    targetPort: web
  - name: metrics
    port: 8080
    targetPort: 8080
  selector:
    app: cost-janitor
