k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cost-janitor-ingress
  namespace: developerautomation-xavgy
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
    - host: api.hellman.oxygen.dfds.cloud
      http:
        paths:
          - path: /costjanitor2
            backend:
              serviceName: cost-janitor-service
              servicePort: external
